GNOME Bugzilla – Bug 357322
Handling of self-signatures is confusing
Last modified: 2010-12-13 09:57:00 UTC
Please describe the problem: Viewing the properties of my key, under Names/Signatures, neither of the keys listed has its self-signature entry in the TreeView. If I click on one of the keys, the Sign button becomes enabled and I can sign the key again... but I don't actually complete the procedure because I'm not sure what will happen (since the keys have already been self-signed). Steps to reproduce: 1. 2. 3. Actual results: Expected results: Does this happen every time? Other information:
I don't know if the sign button should even be present for key pairs. Nothing appears to happen if you carry through with signing your key again. Nate: ruling?
It's been useful to me. I have multiple keys and I need to sign them with each other...
You're right, I've done that as well. Perhaps what we need is some kind of a check disabling the button if the key is the same as the default signing key?
With seahorse 0.9.7, cancelling the sign key window makes Seahorse start the keyserver synchronisation process! I then get this printed to the console: seahorse:28719): Gtk-WARNING **: Error loading icon: Failed to open file '/usr/share/pixmaps/seahorse//22x22/seahorse-sign.png': No such file or directory and all widgets in Seahorse stop responding. The window redraws if I cover & expose it though.
(In reply to comment #4) > With seahorse 0.9.7, cancelling the sign key window makes Seahorse start the > keyserver synchronisation process! I then get this printed to the console: > > seahorse:28719): Gtk-WARNING **: Error loading icon: Failed to open file > '/usr/share/pixmaps/seahorse//22x22/seahorse-sign.png': No such file or > directory > > and all widgets in Seahorse stop responding. The window redraws if I cover & > expose it though. Just to inform that it doesn't happen anymore
Should seahorse show self signatures? Maybe a checkbox to do it? If the key is already seahorse should at least show a messagebox because at the moment, nothing happens and the user may be confused, I agree.
Created attachment 154290 [details] [review] 0001-Show-information-message-when-you-try-to-sign-an-UID.patch Here's a possible solution. Since it's UI and string freeze time now and this is not a major bug, it would be commit for the 2.31 release in any case.
Review of attachment 154290 [details] [review]: This looks good to me. Let's make sure to test it then commit following branching for the next dev version.
Another release cycle has passed :-/
Merged with master. Pablo, in the future you can probably merge these changes in at the appropriate time.