Show information message when you try to sign an UID...

... which was already signed with that key.
Before, nothing happened and this was confusing some users,
specially because self-signatures are not shown.

Part of: https://bugzilla.gnome.org/show_bug.cgi?id=357322